--- a/src/constants/translations/id-ID.json
+++ b/src/constants/translations/id-ID.json
@@ -1,5 +1,5 @@
 {
   "app.name": "React Boilerplate",
   "app.desc": "Template project aplikasi react untuk scalibility yang lebih baik.",
-  "app.info": "Architecture oleh Thomi Jasir"
+  "app.info": "Architecture oleh {name}"
 }
